# dnctree

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
dnctree/: __init__.py  __main__.py  algtesting.py  amy.ipynb  amytest.ipynb  distance_file_io.py  distances.py  dnctree.py  dnctree_k.py  dnctree_k_test.ipynb  exceptions.py  main.py  msa.py  notes.md  partialdistancematrix.py  stupid_tree.py  tree.py
dnctreek/dnctree/: amy.py  exceptions.py  pahmm_adaptor.py  partialdistancematrix.py
experiments/figures/2020_05_09a/: mean_distances_d7.txt
experiments/figures/2020_05_09b/: README.txt  mean_distances_d7.txt
experiments/figures/2020_05_10/: mean_distances_d7.txt
experiments/seqbased_testing/: Snakefile
experiments/simple_trees_no_seqs/: Snakefile
profiling/: simple.py
sample_data/: L500_sd0.0_WAG_n0.matrix  L500_sd0.0_WAG_n0.phylip  five.phylip  four.phylip  three.phylip
testdata/: five.phy  four.phy  s63_L50.phylip  s6_L100.phylip  s83_L500.phylip  six.phy
tests/: dnctree_test.py  no_char_shared.fa  partialdistancematrix_test.py  taxaset_test.py  test_distances.py  test_dnctree.py  tree_test.py
